@@ -11,6 +11,12 @@ td.diff-ntitle {
 td.diff-marker {
 	text-align: right;
 }
+.rtl td.diff-marker {
+	text-align: left;
+}
+td.diff-lineno {
+	font-weight: bold;
+}
 td.diff-addedline {
 	background: #cfc;
 	font-size: smaller;
